@@ -1163,14 +1163,19 @@ typedef DWORD FLONG;
 #define IMAGE_SUBSYSTEM_EFI_ROM	13
 #define IMAGE_SUBSYSTEM_XBOX	14
 
-#define IMAGE_DLL_CHARACTERISTICS_DYNAMIC_BASE		0x0040
-#define IMAGE_DLL_CHARACTERISTICS_FORCE_INTEGRITY	0x0080
-#define IMAGE_DLL_CHARACTERISTICS_NX_COMPAT		0x0100
+#define IMAGE_DLLCHARACTERISTICS_DYNAMIC_BASE		0x0040
+#define IMAGE_DLLCHARACTERISTICS_FORCE_INTEGRITY	0x0080
+#define IMAGE_DLLCHARACTERISTICS_NX_COMPAT		0x0100
 #define IMAGE_DLLCHARACTERISTICS_NO_ISOLATION		0x0200
 #define IMAGE_DLLCHARACTERISTICS_NO_SEH			0x0400
 #define IMAGE_DLLCHARACTERISTICS_NO_BIND		0x0800
 #define IMAGE_DLLCHARACTERISTICS_WDM_DRIVER		0x2000
 #define IMAGE_DLLCHARACTERISTICS_TERMINAL_SERVER_AWARE	0x8000
+
+/* Keep broken definitions for backward compatibility. */
+#define IMAGE_DLL_CHARACTERISTICS_DYNAMIC_BASE IMAGE_DLLCHARACTERISTICS_DYNAMIC_BASE
+#define IMAGE_DLL_CHARACTERISTICS_FORCE_INTEGRITY IMAGE_DLLCHARACTERISTICS_FORCE_INTEGRITY
+#define IMAGE_DLL_CHARACTERISTICS_NX_COMPAT IMAGE_DLLCHARACTERISTICS_NX_COMPAT
 
 #define IMAGE_FIRST_SECTION(h) ((PIMAGE_SECTION_HEADER) ((DWORD)h+FIELD_OFFSET(IMAGE_NT_HEADERS,OptionalHeader)+((PIMAGE_NT_HEADERS)(h))->FileHeader.SizeOfOptionalHeader))
 #define IMAGE_DIRECTORY_ENTRY_EXPORT	0
